Refactor DTOs to use Builder pattern
Replaced direct instantiation of DTOs with a large number of null values with the Builder pattern. This improves readability and reduces fragility.

- Converted `ProcessoDto`, `ProcessoDetalheDto`, `MapaDto`, and `ProcessoResumoDto` from records to classes with Lombok's `@Builder`.
- Updated all usages of these DTOs in the codebase to use the new builder pattern.
- Fixed all compilation errors that arose from the refactoring.
- Ensured all tests pass after the changes.